test/libyul/yulSyntaxTests/objects/incomplete1.yul
object {
// ----
// ParserError 2314: (7-8): Expected 'StringLiteral' but got '{'
